--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,8 +45,18 @@
       </header>
       <footer>
         This project was coded by Angelika Czerwińska and is open-sourced on
-        GitHub and hosted on Netlify
+        <a
+          href="https://github.com/AngelikaCz/Weather_app_project"
+          target="_blank"
+        >
+          GitHub</a
+        >
+        and hosted on
+        <a href="https://sparkly-kitten-ca6639.netlify.app" target="_blank"
+          >Netlify</a
+        >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
