Connected data from API

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
           </div>
         </form>
         <div class="city">Paris, Sunday 14:00</div>
-        <div>Cloudy</div>
+        <div id="description">Cloudy</div>
         <div class="temperature">
-          ☀ 19° <span class="units"><a href="#">C</a>|<a href="#">F</a></span>
+          ☀ <span id="temperature">19</span>°
+          <span class="units"><a href="#">C</a>|<a href="#">F</a></span>
         </div>
-        <div>Humidity x% Wind x%</div>
+        <div>
+          Humidity <span id="humidity">x</span>% Wind
+          <span id="wind">x</span>km/h
+        </div>
       </header>
       <footer>
         This project was coded by Angelika Czerwińska and is open-sourced on
