Added cuurent time and day

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
               />
             </div>
             <div class="col-3">
-              <input type="submit" value="Search" class="btn btn-dark" />
+              <input
+                type="submit"
+                value="Search"
+                class="btn btn-dark"
+                id="search_button"
+              />
             </div>
           </div>
         </form>
-        <div class="city">Paris, Sunday 14:00</div>
+        <div class="city">Paris, <span id="date">Sunday 14:00</span></div>
         <div id="description">Cloudy</div>
         <div class="temperature">
           ☀ <span id="temperature">19</span>°
