Connected the icons from API

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         <div class="city">Paris, <span id="date">Sunday 14:00</span></div>
         <div id="description">Cloudy</div>
         <div class="temperature">
-          ☀ <span id="temperature">19</span>°
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/169/169367.png"
+            alt="sun icon"
+            id="icon"
+          /><span id="temperature">19</span>°
           <span class="units"><a href="#">C</a>|<a href="#">F</a></span>
         </div>
         <div>
