Connected search engine with API

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 type="text"
                 class="form-control form"
                 placeholder="Type your city here"
+                id="city-name"
               />
             </div>
             <div class="col-3">
@@ -41,7 +42,9 @@
             </div>
           </div>
         </form>
-        <div class="city">Paris, <span id="date">Sunday 14:00</span></div>
+        <div class="city">
+          <span id="city">Paris</span>, <span id="date">Sunday 14:00</span>
+        </div>
         <div id="description">Cloudy</div>
         <div class="temperature">
           <img
