Added units conversion

--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
           </div>
         </form>
         <div class="city">
-          <span id="city">Paris</span>, <span id="date">Sunday 14:00</span>
+          <span id="city">Warsaw</span>, <span id="date">Sunday 14:00</span>
         </div>
         <div id="description">Cloudy</div>
         <div class="temperature">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/169/169367.png"
-            alt="sun icon"
-            id="icon"
-          /><span id="temperature">19</span>°
-          <span class="units"><a href="#">C</a>|<a href="#">F</a></span>
+          <img src="#" alt="sun icon" id="icon" /><span id="temperature"
+            >19</span
+          >°
+          <span class="units"
+            ><a href="#" id="celsius" class="notactive">C</a>|<a
+              href="#"
+              id="fahrenheit"
+              >F</a
+            ></span
+          >
         </div>
         <div>
           Humidity <span id="humidity">x</span>% Wind
@@ -64,11 +68,15 @@
         <a
           href="https://github.com/AngelikaCz/Weather_app_project"
           target="_blank"
+          class="link"
         >
           GitHub</a
         >
         and hosted on
-        <a href="https://sparkly-kitten-ca6639.netlify.app" target="_blank"
+        <a
+          href="https://sparkly-kitten-ca6639.netlify.app"
+          target="_blank"
+          class="link"
           >Netlify</a
         >
       </footer>
