Fixed hours/minutes, fixed backgroudn-image

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             ></span
           >
         </div>
-        <div>
+        <div class="last_section">
           Humidity <span id="humidity">x</span>% Wind
           <span id="wind">x</span>km/h
+          <br />
         </div>
       </header>
       <footer>
