--- a/index.html
+++ b/index.html
@@ -61,7 +61,22 @@
         <div class="last_section">
           Humidity <span id="humidity">x</span>% Wind
           <span id="wind">x</span>km/h
-          <br />
+          <hr />
+        </div>
+        <div class="container">
+          <div class="row forecast">
+            <div class="col-2">
+              <span>Saturday</span>
+              <img
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="clouds"
+                width="50px;"
+              />
+              <div class="forecast-temp">
+                26° <span class="min-forecast"> 17°</span>
+              </div>
+            </div>
+          </div>
         </div>
       </header>
       <footer>
