Added JS to duplicate forecast

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <div>
+    <div class="container">
       <header class="main">
         <form>
           <div class="row">
@@ -63,20 +63,8 @@
           <span id="wind">x</span>km/h
           <hr />
         </div>
-        <div class="container">
-          <div class="row forecast">
-            <div class="col-2">
-              <span>Saturday</span>
-              <img
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt="clouds"
-                width="50px;"
-              />
-              <div class="forecast-temp">
-                26° <span class="min-forecast"> 17°</span>
-              </div>
-            </div>
-          </div>
+        <div class="forecast" id="forecast">
+          <div class="row"></div>
         </div>
       </header>
       <footer>
