Removed conversion to Fahrenheit

--- a/index.html
+++ b/index.html
@@ -50,22 +50,14 @@
           <img src="#" alt="sun icon" id="icon" /><span id="temperature"
             >19</span
           >°
-          <span class="units"
-            ><a href="#" id="celsius" class="notactive">C</a>|<a
-              href="#"
-              id="fahrenheit"
-              >F</a
-            ></span
-          >
+          <span class="units">C</span>
         </div>
         <div class="last_section">
           Humidity <span id="humidity">x</span>% Wind
           <span id="wind">x</span>km/h
           <hr />
         </div>
-        <div class="forecast" id="forecast">
-          <div class="row"></div>
-        </div>
+        <div class="forecast" id="forecast"></div>
       </header>
       <footer>
         This project was coded by Angelika Czerwińska and is open-sourced on
